# RAXPLORER

./: .gitignore  CLA.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml  run.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_model_config.py  003_add_ollama_model.py  003_add_system_message.py  07ba5409fe23_initial_migration.py
backend/app/: dependencies.py  main.py
backend/app/api/: chat.py  deps.py  files.py  models.py
backend/app/api/v1/: chat.py  deps.py  files.py  models.py
backend/app/core/: config.py  database.py  middleware.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/models/: chat.py  file.py  model_config.py
backend/app/schemas/: __init__.py  chat.py  file.py  file_processing.py  model.py  model_config.py  rag.py
backend/app/services/: chat.py  llm.py  model.py  model_config.py  rag.py  rag_dependencies.py  storage.py
backend/app/services/file/: processor.py
backend/app/services/llm/: base.py  chatgpt.py  claude.py  factory.py  ollama.py
backend/app/services/rag/: chunker.py  contextual_retrieval.py  document_processor.py  embeddings.py  processor.py  prompts.py  rag.py  rag_dependencies.py  retriever.py
backend/app/utils/: case_utils.py  errors.py  vector_store.py
backend/deploy/docker/: Dockerfile  docker-compose.yml
backend/scripts/: start.sh
frontend/: .dockerignore  get_project_structure.py  next.config.ts  package-lock.json  package.json
frontend/deploy/docker/: Dockerfile
frontend/src/app/: page.tsx
frontend/src/components/: chat-interface.tsx
frontend/src/components/ui/: content-viewer.tsx  modal.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/hooks/: useChat.ts  useFiles.ts  useModelConfig.ts
